CSS fix: overflow:visible on main

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -54,7 +54,6 @@ main {
     flex-direction: column;
     position: relative;
     padding: 48px 0;
-    overflow: hidden;
     background-color: $primaryBgColor;
     box-shadow: inset 0 0 50px 0 rgba(black, .35),
                 inset 0 50px 45px 0 rgba(black, .35);
@@ -192,6 +191,46 @@ button:-moz-focusring,
 /*  HELPERS
    ============================== */
 
+.d-none,
 [class^=only-] {
     display: none;
+}
+
+
+/*  WEEK
+   ============================== */
+
+.chart-box {
+    display: flex;
+    height: 350px;
+    margin-top: 48px;
+    text-align: center;
+    border: 2px solid #c00;
+    border-radius: 8px;
+    overflow: hidden;
+
+    .day {
+        width: 150px;
+    }
+
+    .name {
+        color: black;
+        background-color: white;
+        padding: 12px;
+        font-size: 32px;
+        font-family: lobster2;
+    }
+
+    [class^=icon-] {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 80px;
+        font-size: 72px;
+        margin-top: 5px;
+    }
+    
+    .description::first-letter {
+        text-transform: uppercase;
+    }
 }
