--- a/src/component/Entrance/Entrance.scss
+++ b/src/component/Entrance/Entrance.scss
@@ -6,6 +6,7 @@
 .entrance {
     justify-content: center;
     min-height: 460px;
+    overflow: hidden;
 
     .search-box {
         display: flex;
